INCLUDES           = $(all_includes) $(LIBGPOD_CFLAGS) $(taglib_includes) -I.. -I../engine -I../amarokcore
METASOURCES        = AUTO

libgpodmediadevice_la_LDFLAGS  = $(all_libraries)

noinst_LTLIBRARIES = libgpodmediadevice.la

libgpodmediadevice_la_SOURCES =  \
                     gpodmediadevice.cpp

noinst_HEADERS = \
                     gpodmediadevice.h
