imagesdir = $(kde_datadir)/amarok/images

images_DATA = \
    amarok_cut.png \
    b_next.png \
    b_pause.png \
    b_play.png \
    b_prev.png \
    b_stop.png \
    bucky.png \
    description.png \
    eq_active2.png \
    eq_inactive2.png \
    folder_crystal.png \
    loading1.png \
    loading2.png \
    logo_splash.png \
    logo_web.png \
    musicbrainz.png \
    pl_active2.png \
    pl_inactive2.png \
    sound50.png \
    sound80.png \
    time_minus.png \
    time_plus.png \
    vol_speaker.png

    
    
